a my stoimy w fendi