@@ -32,7 +32,7 @@ dependencies {
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-
+	testImplementation("io.mockk:mockk:1.14.5")
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.8.0")
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-validation")
@@ -47,6 +47,7 @@ kotlin {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks.test {
